syntax = "proto3";

package pubsub;

//---------------------------------------

enum PUB_TOPIC
{
	PT_None = 0;
	PT_LogicCmd = 1;
}

message LOGIC_CMD
{
	string cmd = 1;
	repeated string params = 2;
}